--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,3 @@
-[package]
-name = "wordle"
-version = "0.1.0"
-edition = "2024"
-
-[dependencies]
-text_io = "0.1.13"
+[workspace]
+resolver = "3"
+members = ["rust"]
